# agent-benchmarks

./: .gitignore  README.md  pyproject.toml
langchain_benchmarks/: run.py
langchain_benchmarks/prompt_to_api/agents/: react.py
langchain_benchmarks/prompt_to_api/tasks/: prompt_to_api.py
langchain_benchmarks/prompt_to_api/utils/evaluation/: api.py
langchain_benchmarks/prompt_to_api/utils/tools/: code_execution.py  code_templates.py
quome-agentic-benchmarks/: README.md  pyproject.toml  requirements.txt
quome-agentic-benchmarks/quome_agentic_benchmarks/: run.py  tools.py
quome-agentic-benchmarks/quome_agentic_benchmarks/agents/: __init__.py  example_agent.py  example_ollama_agent.py  openai_coder_v1.py  react.py
quome-agentic-benchmarks/quome_agentic_benchmarks/agents/_temp_langchain_overrides/: ollama_functions.py
quome-agentic-benchmarks/quome_agentic_benchmarks/agents/prompts/: base.py  coding.py
quome-agentic-benchmarks/quome_agentic_benchmarks/datasets/: __init__.py  base.py  coding.py
quome-agentic-benchmarks/quome_agentic_benchmarks/eval/: frontend.py  prd.py  rest_api.py
quome-agentic-benchmarks/quome_agentic_benchmarks/knowledge/: document_loaders.py
quome-agentic-benchmarks/quome_agentic_benchmarks/tasks/: __init__.py  base.py  coding.py
quome-agentic-benchmarks/quome_agentic_benchmarks/tools/: __init__.py
quome-agentic-benchmarks/quome_agentic_benchmarks/utils/: benchmark.py  coding.py
quome-agentic-benchmarks/tests/: test_eval.py
