[tool.poetry]
name = "quome-agentic-benchmarks"
version = "0.1.0"
description = ""
authors = ["Collin Overbay <cjoverbay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.0.64"
langchain-community = "^0.2.3"
langchain-experimental = "^0.0.60"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
